--- a/useInput/package.json
+++ b/useInput/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nooks/useInput",
+  "name": "@nooks/use-input",
   "version": "1.0.0",
   "description": "React Hook to use text inputs in React",
   "main": "index.js",
